--- a/Volatility/VolatilityWPFApp/CustomerDetailsWindow.xaml
+++ b/Volatility/VolatilityWPFApp/CustomerDetailsWindow.xaml
@@ -5,10 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VolatilityWPFApp"
         mc:Ignorable="d"
-        Title="CustomerDetailsWindow" Height="390.349" Width="536.837" ResizeMode="NoResize" Icon="small.png">
+        Title="CustomerDetailsWindow" Height="386.349" Width="553.837" ResizeMode="NoResize" Icon="small.png" Closed="Window_Closed">
 
-    <Grid>
-        <Grid Margin="1,1,10,10">
+    <Grid Margin="1,1,1,1">
+        <Grid Margin="5,5,5,5">
             <Label x:Name="label" Content="Title:" HorizontalAlignment="Left" Margin="80,15,0,0" VerticalAlignment="Top" Width="47" 
                    RenderTransformOrigin="-1.121,-1.352" Height="26" HorizontalContentAlignment="Right" />
             <ComboBox x:Name="cmbTitle" HorizontalAlignment="Left" Margin="137,10,0,0" VerticalAlignment="Top"
@@ -35,11 +35,11 @@
             <TextBox x:Name="txtLastName" HorizontalAlignment="Left" Height="26" Margin="137,85,0,0" TextWrapping="Wrap" Text="{Binding CustomerDetails.LastName}" VerticalAlignment="Top" Width="227" RenderTransformOrigin="-0.248,-0.657"/>
             <TextBox x:Name="txtOtherNames" HorizontalAlignment="Left" Height="26" Margin="137,125,0,0" TextWrapping="Wrap" Text="{Binding CustomerDetails.OtherNames}" VerticalAlignment="Top" Width="379" RenderTransformOrigin="-0.248,-0.657"/>
             <DatePicker x:Name="dtDOB"  SelectedDate="{Binding Path=CustomerDetails.DOB}" HorizontalAlignment="Left" Height="26"
-                        Margin="420,10,0,0" VerticalAlignment="Top" Width="96"/>
-            <Label x:Name="label_Copy" Content="DOB:" HorizontalAlignment="Left" Margin="378,10,0,0" VerticalAlignment="Top" Width="37" RenderTransformOrigin="-1.121,-1.352" Height="26"/>
+                        Margin="421,50,0,0" VerticalAlignment="Top" Width="96"/>
+            <Label x:Name="label_Copy" Content="DOB:" HorizontalAlignment="Left" Margin="379,50,0,0" VerticalAlignment="Top" Width="37" RenderTransformOrigin="-1.121,-1.352" Height="26"/>
             <Label x:Name="lblContactNumber1" Content="Contact Number:" HorizontalAlignment="Left" Margin="25,156,0,0" VerticalAlignment="Top" 
                    Width="102" RenderTransformOrigin="-1.121,-1.352" Height="26" HorizontalContentAlignment="Right"/>
-            <TextBox x:Name="txtContactNumber" HorizontalAlignment="Left" Height="26" Margin="137,160,0,0" TextWrapping="Wrap" Text="{Binding CustomerDetails.ContactNumber}" VerticalAlignment="Top" Width="96" RenderTransformOrigin="-0.248,-0.657" />
+            <TextBox x:Name="txtContactNumber" HorizontalAlignment="Left" Height="26" Margin="137,160,0,0" TextWrapping="Wrap" Text="{Binding CustomerDetails.ContactNumber}" VerticalAlignment="Top" Width="96" RenderTransformOrigin="-0.248,-0.657" PreviewTextInput="txtContactNumber_PreviewTextInput" />
             <Label x:Name="lblContactNumber" Content="Email:" HorizontalAlignment="Left" Margin="247,160,0,0" VerticalAlignment="Top" 
                 Width="51" RenderTransformOrigin="-1.121,-1.352" Height="26" HorizontalContentAlignment="Right"/>
             <TextBox x:Name="txtEmail" HorizontalAlignment="Left" Height="26" Margin="303,160,0,0" TextWrapping="Wrap" Text="{Binding CustomerDetails.EmailAddress}" VerticalAlignment="Top" Width="213" RenderTransformOrigin="-0.248,-0.657" />
@@ -52,6 +52,13 @@
             <TextBox x:Name="txtAddress1" HorizontalAlignment="Left" Height="26" Margin="137,199,0,0" TextWrapping="Wrap" Text="{Binding Path=CustomerDetails.PostalAddressLine1}" VerticalAlignment="Top" Width="379" RenderTransformOrigin="-0.248,-0.657" />
             <TextBox x:Name="txtAddress2" HorizontalAlignment="Left" Height="26" Margin="137,234,0,0" TextWrapping="Wrap" Text="{Binding Path=CustomerDetails.PostalAddressLine2}" VerticalAlignment="Top" Width="379" RenderTransformOrigin="-0.248,-0.657" />
             <TextBox x:Name="txtPostCode" HorizontalAlignment="Left" Height="26" Margin="137,273,0,0" TextWrapping="Wrap" Text="{Binding CustomerDetails.PostCode}" VerticalAlignment="Top" Width="62" RenderTransformOrigin="-0.248,-0.657" />
+            <Button x:Name="btnOk" Content="OK" HorizontalAlignment="Left" Height="25" Margin="238,0,0,5" VerticalAlignment="Bottom" Width="60" Click="btnOk_Click" RenderTransformOrigin="0.517,-0.2"/>
+            <Button x:Name="btnCancel" Content="Cancel" HorizontalAlignment="Left" Margin="303,0,0,5" VerticalAlignment="Bottom" Width="60" Height="25" Click="btnCancel_Click"/>
+            <Label x:Name="lblCustomerId" Content="{Binding CustomerDetails.Id}" Background="Beige" BorderThickness="1,1,1,1" BorderBrush="DimGray"
+                   HorizontalAlignment="Left" Margin="460,10,0,0" VerticalAlignment="Top" Width="46" 
+                RenderTransformOrigin="-1.121,-1.352" Height="26" HorizontalContentAlignment="Right"/>
+            <Label x:Name="lblId1" Content="ID:" HorizontalAlignment="Left" Margin="421,10,0,0" VerticalAlignment="Top" 
+                Width="28" RenderTransformOrigin="-1.121,-1.352" Height="26" HorizontalContentAlignment="Right"/>
         </Grid>
 
     </Grid>
