--- a/Volatility/VolatilityWPFApp/MainWindow.xaml
+++ b/Volatility/VolatilityWPFApp/MainWindow.xaml
@@ -6,12 +6,24 @@
         xmlns:local="clr-namespace:VolatilityWPFApp"
         mc:Ignorable="d"
         
-        Title="MainWindow" Height="497" Width="680" Icon="08-saturn_98601.png">
+        Title="MainWindow" Height="497" Width="680" Icon="08-saturn_98601.png" Loaded="Window_Loaded">
+    <Window.CommandBindings>
+        <CommandBinding Command="New" Executed="NewCommandBinding_Executed"/>
+        <CommandBinding Command="Open" Executed="OpenCommandBinding_Executed"/>
+        <CommandBinding Command="Delete" Executed="DeleteCommandBinding_Executed"/>
+        <CommandBinding Command="Refresh" Executed="RefreshCommandBinding_Executed"/>
+    </Window.CommandBindings>
+    <Window.InputBindings>
+        <KeyBinding Key="N" Modifiers="Control" Command="New"/>
+        <KeyBinding Key="E" Modifiers="Control" Command="Open"/>
+        <KeyBinding Key="D" Modifiers="Control" Command="Delete"/>
+        <KeyBinding Key="R" Modifiers="Control" Command="Refresh"/>
+    </Window.InputBindings>
     <Grid Margin="0,54,0,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="43"/>
-            <RowDefinition Height="325*"/>
-            <RowDefinition Height="44*"/>
+            <RowDefinition Height="331*"/>
+            <RowDefinition Height="38"/>
         </Grid.RowDefinitions>
         <DataGrid x:Name="dataGrid" Margin="5" Grid.Row="1" ItemsSource="{Binding Customers}" AutoGenerateColumns="False" 
                   AlternationCount="2" AlternatingRowBackground="Beige" VerticalGridLinesBrush="White" SelectionMode="Single" SelectionUnit="FullRow">
@@ -27,7 +39,7 @@
                 </Style>
             </DataGrid.Resources>
         </DataGrid>
-        <Label x:Name="lblNotifications" Content="" Margin="5" Grid.Row="2" BorderThickness="1" BorderBrush="Black">
+        <Label x:Name="lblNotifications" Content="" Margin="100,5,5,5" Grid.Row="2" BorderThickness="1" BorderBrush="Black">
             <Label.Background>
                 <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlLightLightColorKey}}"/>
             </Label.Background>
@@ -39,14 +51,16 @@
         <Button x:Name="btnRefresh" Content="Refresh" HorizontalAlignment="Right" Margin="0,10,5,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.36,0.05" HorizontalContentAlignment="Center" VerticalContentAlignment="Top" Click="btnRefresh_Click" Height="20"/>
         <DockPanel HorizontalAlignment="Left" Height="27" LastChildFill="False" Margin="5,-50,0,0" VerticalAlignment="Top" Width="371">
             <Menu x:Name="menu"  Height="27" VerticalAlignment="Top" Width="84">
-                <MenuItem Header="Records" Height="27" Width="84">
+                <MenuItem Header="Actions" Height="27" Width="84">
                     <MenuItem x:Name="menuItemNew" Header="_New" Click="menuItemNew_Click"/>
                     <MenuItem x:Name="menuItemEdit" Header="_Edit" Click="menuItemEdit_Click"/>
-                    <MenuItem x:Name="menuItemDelete" Header="_Delete"/>
+                    <MenuItem x:Name="menuItemDelete" Header="_Delete" Click="menuItemDelete_Click"/>
+                    <MenuItem x:Name="menuItemRefresh" Header="_Refresh" Click="menuItemRefresh_Click"/>
                     <Separator />
-                    <MenuItem Header="_Exit" />
+                    <MenuItem x:Name="menuItemExit" Header="_Exit" Click="menuItemExit_Click"/>
                 </MenuItem>
             </Menu>
         </DockPanel>
+        <Label x:Name="label2" Content="Notifications:" Margin="10,5,572,10" Grid.Row="2" Height="23" RenderTransformOrigin="0.333,0.348"/>
     </Grid>
 </Window>
