--- a/Volatility/VolatilityWPFApp/MainWindow.xaml
+++ b/Volatility/VolatilityWPFApp/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:VolatilityWPFApp"
         mc:Ignorable="d"
         
-        Title="MainWindow" Height="497" Width="680" Icon="08-saturn_98601.png" Loaded="Window_Loaded">
+        Title="MainWindow" Height="497" Width="680" Icon="08-saturn_98601.png" Loaded="Window_Loaded" Closed="Window_Closed">
     <Window.CommandBindings>
         <CommandBinding Command="New" Executed="NewCommandBinding_Executed"/>
         <CommandBinding Command="Open" Executed="OpenCommandBinding_Executed"/>
@@ -26,7 +26,7 @@
             <RowDefinition Height="38"/>
         </Grid.RowDefinitions>
         <DataGrid x:Name="dataGrid" Margin="5" Grid.Row="1" ItemsSource="{Binding Customers}" AutoGenerateColumns="False" 
-                  AlternationCount="2" AlternatingRowBackground="Beige" VerticalGridLinesBrush="White" SelectionMode="Single" SelectionUnit="FullRow">
+                  AlternationCount="2" AlternatingRowBackground="Beige" VerticalGridLinesBrush="White" SelectionMode="Single" SelectionUnit="FullRow" PreviewKeyDown="dataGrid_PreviewKeyDown">
             <DataGrid.Columns >
                 <DataGridTextColumn Header="ID" Binding="{Binding Id}"></DataGridTextColumn>
                 <DataGridTextColumn Header="First Name" Binding="{Binding FirstName}"></DataGridTextColumn>
