--- a/Volatility/VolatilityWPFApp/MainWindow.xaml
+++ b/Volatility/VolatilityWPFApp/MainWindow.xaml
@@ -26,12 +26,12 @@
             <RowDefinition Height="38"/>
         </Grid.RowDefinitions>
         <DataGrid x:Name="dataGrid" Margin="5" Grid.Row="1" ItemsSource="{Binding Customers}" AutoGenerateColumns="False" 
-                  AlternationCount="2" AlternatingRowBackground="Beige" VerticalGridLinesBrush="White" SelectionMode="Single" SelectionUnit="FullRow" PreviewKeyDown="dataGrid_PreviewKeyDown">
+                  AlternationCount="2" AlternatingRowBackground="Beige" VerticalGridLinesBrush="White" SelectionMode="Single" SelectionUnit="FullRow" PreviewKeyDown="dataGrid_PreviewKeyDown" IsReadOnly="True">
             <DataGrid.Columns >
-                <DataGridTextColumn Header="ID" Binding="{Binding Id}"></DataGridTextColumn>
-                <DataGridTextColumn Header="First Name" Binding="{Binding FirstName}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Last Name" Binding="{Binding LastName}"></DataGridTextColumn>
-                <DataGridTextColumn Header="DOB" Binding="{Binding DOB, StringFormat=\{0:dd/MM/yyyy\}}"></DataGridTextColumn>
+                <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="50"></DataGridTextColumn>
+                <DataGridTextColumn Header="First Name" Binding="{Binding FirstName}" ></DataGridTextColumn>
+                <DataGridTextColumn Header="Last Name" Binding="{Binding LastName}" ></DataGridTextColumn>
+                <DataGridTextColumn Header="DOB" Binding="{Binding DOB, StringFormat=\{0:dd/MM/yyyy\}}" Width="*"></DataGridTextColumn>
             </DataGrid.Columns>
             <DataGrid.Resources>
                 <Style TargetType="DataGridRow">
